Correct styling bug on safari

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -237,8 +237,6 @@ body {
                 width: 90%;
                 justify-content: end;
                 -webkit-justify-content: flex-end;
-                align-items: flex-end;
-                -webkit-align-items: flex-end;
 
                 .form-container {
                     margin: 0;
